--- a/tao-tram/style.css
+++ b/tao-tram/style.css
@@ -227,63 +227,62 @@
 }
 
 
-
 /* Hiệu ứng fade-down */
-.lb4, .lb44, .img-timeline, .img-dress, .til1 {
+.kinhmoi, .box-time {
     transform: translateY(-50px);
     opacity: 0;
     transition: transform 0.5s, opacity 0.5s;
   }
   
-  .lb4.visible, .lb44.visible, .img-timeline.visible, .img-dress.visible, .til1.visible {
+  .kinhmoi.visible, .box-time.visible{
     transform: translateY(0);
     opacity: 1;
   }
   
   /* Hiệu ứng fade-up */
-  .lb2, .lb22, .lb6, .church, .churchh, .til2 {
+  .imge{
     transform: translateY(50px);
     opacity: 0;
     transition: transform 0.5s, opacity 0.5s;
   }
   
-  .lb2.visible, .lb22.visible, .lb6.visible, .church.visible, .churchh.visible, .til2.visible {
+  .imge.visible{
     transform: translateY(0);
     opacity: 1;
   }
   
   /* Hiệu ứng fade-right */
-  .lb3, .story1 {
+  .img-con1 {
     transform: translateX(-50px);
     opacity: 0;
     transition: transform 0.5s, opacity 0.5s;
   }
   
-  .lb3.visible, .story1.visible {
+  .img-con1.visible{
     transform: translateX(0);
     opacity: 1;
   }
   
   /* Hiệu ứng fade-left */
-  .lb3, .story2 {
+  .img-con {
     transform: translateX(50px);
     opacity: 0;
     transition: transform 0.5s, opacity 0.5s;
   }
   
-  .lb3.visible, .story2.visible {
+  .img-con.visible {
     transform: translateX(0);
     opacity: 1;
   }
   
   /* Hiệu ứng zoom-in */
-  .time-date, .lb-time, .lb-timee {
+  .save, .wp, .add, .til1, .til2, .img-time{
     transform: scale(0.5);
     opacity: 0;
     transition: transform 0.5s, opacity 0.5s;
   }
   
-  .time-date.visible, .lb-time.visible, .lb-timee.visible {
+  .save.visible, .wp.visible, .add.visible, .til1.visible, .til2.visible, .img-time.visible {
     transform: scale(1);
     opacity: 1;
   }
